# ZhiYan

./: .env.example  .gitignore  README.md  harness.yaml
backend/: harness.toml  pyproject.toml  pytest.ini
backend/app/: cli.py  main.py
backend/evals/: content_type_baseline_dataset.json  evaluate_content_type_signals.py
backend/tests/: conftest.py  test_agentic_runtime_agent.py  test_agentic_runtime_cli.py  test_agentic_runtime_live_smoke.py  test_agentic_runtime_mcp.py  test_agentic_runtime_model_client.py  test_agentic_runtime_models.py  test_agentic_runtime_skills.py  test_agentic_runtime_tasks.py  test_agentic_runtime_todo.py  test_agentic_runtime_tools.py  test_centi_deck_submission.py  test_centi_deck_verifier.py  test_chat_api.py  test_cli.py  test_content_hints_layout_selection.py  test_content_hints_plumbing.py  test_export_alignment.py  test_export_html_renderer_images.py  test_external_engine_contract.py  test_generate_stream_protocol.py  test_generation_agent_adapter.py  test_generation_agentic_adapter.py  test_generation_agentic_context.py  test_generation_agentic_loop.py  test_generation_agentic_prompt.py  test_generation_agentic_skills.py  test_generation_agentic_subagent.py  test_generation_agentic_todo.py  test_generation_agentic_tools.py  test_generation_agentloop_deck_audit.py  test_generation_agentloop_fix_flow.py  test_generation_agentloop_job_flow.py  test_generation_agentloop_retirement.py  test_generation_guardrails.py  test_generation_instructions.py  test_generation_legacy_deck_adapter.py  test_generation_legacy_deck_audit.py  (+38 more)
(+433 files in other folders)
